// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomView only mandatory properties 1`] = `
Object {
  "paths": Array [
    Object {
      "key": "viewKey",
      "label": "viewLabel",
      "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomView",
    },
  ],
}
`;

exports[`CustomView only mandatory properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Text text=\\"NewCustomView\\" />
</core:FragmentDefinition>"
`;

exports[`CustomView with new handler 1`] = `
Object {
  "sap.ui.controllerExtensions": Object {
    "sap.fe.templates.ListReport.ListReportController": Object {
      "controllerName": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomView",
    },
  },
}
`;

exports[`CustomView with new handler 2`] = `
Object {
  "paths": Array [
    Object {
      "key": "customViewKey",
      "label": "viewLabel",
      "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomView",
    },
  ],
}
`;

exports[`CustomView with new handler 3`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomView'}\\" text=\\"NewCustomView\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomView with new handler 4`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomView with new handler and new table fragment (all properties) 1`] = `
Object {
  "sap.ui.controllerExtensions": Object {
    "sap.fe.templates.ListReport.ListReportController": Object {
      "controllerName": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomView",
    },
  },
}
`;

exports[`CustomView with new handler and new table fragment (all properties) 2`] = `
Object {
  "paths": Array [
    Object {
      "key": "viewKey",
      "label": "viewLabel",
      "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomView",
    },
  ],
}
`;

exports[`CustomView with new handler and new table fragment (all properties) 3`] = `
"<core:FragmentDefinition xmlns=\\"sap.m\\" xmlns:core=\\"sap.ui.core\\" xmlns:u=\\"sap.ui.unified\\">
    <Table id=\\"NewCustomView\\">
        <headerToolbar>
            <OverflowToolbar>
                <content>
                    <Title text=\\"Header Title\\" level=\\"H2\\" />
                    <ToolbarSpacer />
                </content>
            </OverflowToolbar>
        </headerToolbar>
        <infoToolbar>
            <OverflowToolbar>
                <Label text=\\"Toolbar Label\\" />
            </OverflowToolbar>
        </infoToolbar>
        <columns>
            <Column>
                <Text text=\\"Column\\" />
            </Column>
        </columns>
        <items>
            <ColumnListItem>
                <cells>
                    <Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomView'}\\" text=\\"NewCustomView\\" press=\\"handler.onPress\\" />
                </cells>
            </ColumnListItem>
        </items>
    </Table>
</core:FragmentDefinition>
"
`;

exports[`CustomView with new handler and new table fragment (all properties) 4`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomView with new table fragment 1`] = `
Object {
  "paths": Array [
    Object {
      "key": "viewKey",
      "label": "viewLabel",
      "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomView",
    },
  ],
}
`;

exports[`CustomView with new table fragment 2`] = `
"<core:FragmentDefinition xmlns=\\"sap.m\\" xmlns:core=\\"sap.ui.core\\" xmlns:u=\\"sap.ui.unified\\">
    <Table id=\\"NewCustomView\\">
        <headerToolbar>
            <OverflowToolbar>
                <content>
                    <Title text=\\"Header Title\\" level=\\"H2\\" />
                    <ToolbarSpacer />
                </content>
            </OverflowToolbar>
        </headerToolbar>
        <infoToolbar>
            <OverflowToolbar>
                <Label text=\\"Toolbar Label\\" />
            </OverflowToolbar>
        </infoToolbar>
        <columns>
            <Column>
                <Text text=\\"Column\\" />
            </Column>
        </columns>
        <items>
            <ColumnListItem>
                <cells>
                    <Text text=\\"NewCustomView\\" />
                </cells>
            </ColumnListItem>
        </items>
    </Table>
</core:FragmentDefinition>
"
`;
